<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vector"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/vector"
            android:text="@string/vector"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/unitD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/unitD"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@mipmap/unit"
            android:background="#2c0a31"
            android:text="@string/unit_and_dimension"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/vector"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/motion11"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/motion"
            android:text="@string/motion_in_one_dimension_1"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/motion22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vector" />
        <Button
            android:id="@+id/motion22"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@mipmap/two"
            android:background="#2c0a31"
            android:text="@string/motion_in_one_dimension_2"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/motion11"
            app:layout_constraintTop_toBottomOf="@+id/unitD" />

        <Button
            android:id="@+id/NLM1"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/gravity"
            android:text="@string/newton_law_of_motion_1"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/FRICTION"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motion11" />

        <Button
            android:id="@+id/FRICTION"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/friction"
            android:text="@string/friction"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/NLM1"
            app:layout_constraintTop_toBottomOf="@+id/motion22" />

        <Button
            android:id="@+id/WPE"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/power"
            android:text="@string/work_power_and_energy"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rm1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NLM1" />

        <Button
            android:id="@+id/rm1"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/rotationa"
            android:text="@string/rotational_motion_1"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/WPE"
            app:layout_constraintTop_toBottomOf="@+id/FRICTION" />

        <Button
            android:id="@+id/gravity1"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/grav"
            android:text="@string/gravitation"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/el"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WPE" />

        <Button
            android:id="@+id/el"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/elastic"
            android:text="@string/elasticity"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gravity1"
            app:layout_constraintTop_toBottomOf="@+id/rm1" />


        <Button
            android:id="@+id/surface"
            android:layout_width="170dp"
            android:layout_height="129dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/surface"
            android:text="@string/surface_tension"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fm"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gravity1" />

        <Button
            android:id="@+id/fm"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/fluid"
            android:text="@string/fluid_mechanics"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/surface"
            app:layout_constraintTop_toBottomOf="@+id/el" />

        <Button
            android:id="@+id/thermo"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/thermomerty"
            android:text="@string/thermometry"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ktg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/ktg"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@mipmap/kinetic"
            android:background="#2c0a31"
            android:text="@string/k_t_g"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thermo"
            app:layout_constraintTop_toBottomOf="@+id/fm" />


        <Button
            android:id="@+id/thermodynamics"
            android:layout_width="170dp"
            android:layout_height="135dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/thermo"
            android:text="@string/thermodynamics"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/TOH"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thermo" />

        <Button
            android:id="@+id/TOH"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/transmission"
            android:text="@string/transmission_of_heat"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thermodynamics"
            app:layout_constraintTop_toBottomOf="@+id/ktg" />


        <Button
            android:id="@+id/SHM"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/shm"
            android:text="@string/shm"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/WAS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thermodynamics" />

        <Button
            android:id="@+id/WAS"
            android:layout_width="170dp"
            android:layout_height="131dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="#2c0a31"
            android:drawableTop="@mipmap/wave"
            android:text="@string/wave_and_sound"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btnTxtSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/SHM"
            app:layout_constraintTop_toBottomOf="@+id/TOH" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3819211104411482/2842122704"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent">

        </com.google.android.gms.ads.AdView>




    </android.support.constraint.ConstraintLayout>
</ScrollView>
